5.19 2011-03-12 Gregory Nutt <spudmonkey@racsa.co.cr>

	* Initial version of the apps/ directory was released as contributed by
	  Uros Platise.

6.0 2011-03-21 Gregory Nutt <spudmonkey@racsa.co.cr>

	* README.txt -- README cosmetics
	* hello/ -- hello world minor changes
	* Makefile -- Makefile cosmetics (I am slowly adding the Darjeeling JVM)
	* Make.defs -- New file adds common make definitions for applications.
	* hello/Makefile -- Now uses new Make.defs definitions.  Added README.txt.
	* apps/poweroff -- New application to turn off board power.
	* Moved NSH library, netutils, and examples from the nuttx/ directory to
	  the apps/ directory
	* Moved exec_nuttapp machinery into the nuttapp/ directory.

6.1 2011-04-10 Gregory Nutt <spudmonkey@racsa.co.cr>

	* Creation of auto-generated header files now occurs during the context
	  build phase.
	* Added sdcard insert and eject, nsh command '?' and some code remarks
	* Renamed nuttapp to namedapp
	* namedapp/binfs.c -- Create a tiny filesystem that can be used
	  to show the internal named apps under /bin.
	* Numerous fixes to build system required to support building with native
	  Windows toolchain.

6.2 2011-05-06 Gregory Nutt <spudmonkey@racsa.co.cr>

	* apps/examples/nxffs:  Add a test a a configuration that will be used to
	  verify NXFFS.

6.3 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

    * apps/interpreter: Add a directory to hold interpreters.  The Pascal add-
	  on module now installs and builds under this directory.
	* apps/interpreter/ficl: Added logic to build Ficl (the "Forth Inspired
	  Command Language").  See http://ficl.sourceforge.net/.
	* apps/netutils/dhcpc, dhcpcd, and tftp.  If these directories are included
	  in the configuration but CONFIG_NET_UDP is disable (which is not very wise),
	  then a make error occurs because tools/mkdep.sh is called with no files.