@@ -348,6 +348,19 @@ examples/poll
 
   CONFIGURED_APPS += uiplib
 
+examples/rgmp
+^^^^^^^^^^^^^
+
+  RGMP stands for RTOS and GPOS on Multi-Processor.  RGMP is a project for 
+  running GPOS and RTOS simultaneously on multi-processor platforms. You can
+  port your favorite RTOS to RGMP together with an unmodified Linux to form a
+  hybrid operating system. This makes your application able to use both RTOS
+  and GPOS feathures.
+
+  See http://rgmp.sourceforge.net/wiki/index.php/Main_Page for further
+
+  At present, the RGMP example folder contains only an empty main.c file.
+
 examples/romfs
 ^^^^^^^^^^^^^^
 
